--- a/src/index.html
+++ b/src/index.html
@@ -53,7 +53,7 @@
                 <h2 class="event__details__title">UI/UX</h2>
                 <p class="event__details__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil autem nisi eaque odio sequi libero neque ad. Pariatur repellat culpa repudiandae obcaecati, reprehenderit vero delectus optio nulla quia iure perspiciatis?</p>
             </div>
-            <img class="event__image" src="./images/ui-ux.png" alt="frontend">
+            <img class="event__image" src="./images/ui-ux.png" alt="ui-ux">
         </div>
     </section>
     <section class="event event--data-science">
@@ -62,7 +62,7 @@
                 <h2 class="event__details__title">Data Science</h2>
                 <p class="event__details__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil autem nisi eaque odio sequi libero neque ad. Pariatur repellat culpa repudiandae obcaecati, reprehenderit vero delectus optio nulla quia iure perspiciatis?</p>
             </div>
-            <img class="event__image" src="./images/data.png" alt="frontend">
+            <img class="event__image" src="./images/data.png" alt="Data Science">
         </div>
     </section>
     <section class="event event--backend event--image-left">
@@ -71,7 +71,7 @@
                 <h2 class="event__details__title">Back-end</h2>
                 <p class="event__details__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil autem nisi eaque odio sequi libero neque ad. Pariatur repellat culpa repudiandae obcaecati, reprehenderit vero delectus optio nulla quia iure perspiciatis?</p>
             </div>
-            <img class="event__image" src="./images/backend.png" alt="frontend">
+            <img class="event__image" src="./images/backend.png" alt="backend">
         </div>
     </section>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
